Added configuration of signing certificate as env variables. Added Administrator policy. Added AccessDenied page. Added SeedData for first-run

--- a/Pages/Admin/UserAdministration.cshtml
+++ b/Pages/Admin/UserAdministration.cshtml
@@ -23,6 +23,7 @@
         </div>
     </div>
     <h4>@Model.Message</h4>
+    <h4><a href='@Model.CallBackLink'>Set password here</a></h4>
 
     <table class="table">
         <thead>
