--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -17,6 +17,6 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item"><a class="nav-link" asp-area="" asp-page="/Account/Login" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">Login</a></li>
+        <li class="nav-item"><a class="nav-link" asp-area="" asp-page="/Account/Login" asp-route-returnUrl='@Url.Page("/Index", new { area = "" })'>Login</a></li>
     </ul>
 }
