--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,15 +1,29 @@
 ﻿@page
 @model IndexModel
+
+@inject SignInManager<IdentityUser> SignInManager
+
 @{
     ViewData["Title"] = "Auth server";
 }
 
-<div class="container">
-  <div class="jumbotron">
-    <h1>Auth server</h1> 
-    <p>A server to manage users, clients and resources</p>
-    <div class="center">
-        <button class="btn btn-large"><a asp-page="/Account/Login"></a>Click here to login</button>
+@if (!SignInManager.IsSignedIn(User))
+{
+  <div class="container">
+    <div class="jumbotron">
+      <h1>Auth server</h1> 
+      <p>A server to manage users, clients and resources</p>
+      <div class="center">
+          <button class="btn btn-large" onClick="location.href='@Url.Page("/Admin/UserAdministration", new { area = "" })'">Click here to login</button>
+      </div>
     </div>
   </div>
-</div>
+} 
+else {
+<div class="container">
+    <div class="jumbotron">
+      <h1>Auth server</h1> 
+      <p>Select an administration option in the menu bar to configure the server</p>
+    </div>
+  </div>
+}
