--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - AuthServer</p>
+            <p>&copy; 2018 - BSW</p>
         </footer>
     </div>
 
