Upgrade to .net core 3.1

--- a/Pages/Account/AccessDenied.cshtml
+++ b/Pages/Account/AccessDenied.cshtml
@@ -6,4 +6,8 @@
 }
 
 <h3>You do not have access to the requested resource.</h3>
-<H4><button class="btn btn-default"><a asp-page="/Index">Click here to get out of here</a></button></H4>
+<H4>
+    <button class="btn btn-default">
+        <a asp-page="/Index">Click here to get out of here</a>
+    </button>
+</H4>
