--- a/Pages/Admin/UserAdministration.cshtml
+++ b/Pages/Admin/UserAdministration.cshtml
@@ -23,31 +23,34 @@
         </div>
     </div>
     <h4>@Model.Message</h4>
-    <h4><a href='@Model.CallBackLink'>Set password here</a></h4>
+    <h4>
+        <a href="@Model.CallBackLink">Set password here</a>
+    </h4>
 
     <table class="table">
         <thead>
-            <tr>
-                <th>
-                    Id
-                </th>
-                <th>
-                    Username
-                </th>
-            </tr>
-        </thead>
-    @foreach (var item in Model.Users) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                <a asp-page="DeleteUser" asp-route-id="@item.Id">Delete</a>
-            </td>
+            <th>
+                Id
+            </th>
+            <th>
+                Username
+            </th>
         </tr>
-    }
+        </thead>
+        @foreach (var item in Model.Users)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserName)
+                </td>
+                <td>
+                    <a asp-page="DeleteUser" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </table>
 </div>
