--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,3 @@
-@using Microsoft.AspNetCore.Identity
-
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
@@ -10,13 +8,15 @@
             <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" asp-area="" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" id="logout" title="Logout">Logout</a>
+            <a class="nav-link" asp-area="" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new {area = ""})" id="logout" title="Logout">Logout</a>
         </li>
     </ul>
 }
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item"><a class="nav-link" asp-area="" asp-page="/Account/Login" asp-route-returnUrl='@Url.Page("/Index", new { area = "" })'>Login</a></li>
+        <li class="nav-item">
+            <a class="nav-link" asp-area="" asp-page="/Account/Login" asp-route-returnUrl='@Url.Page("/Index", new {area = ""})'>Login</a>
+        </li>
     </ul>
 }
