--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -1,12 +1,16 @@
 body {
-  font-family: sans-serif;
-  margin: 20px
+    font-family: sans-serif;
+    margin: 20px
 }
 
 .navbar {
-  display: flex;
+    display: flex;
 }
 
-.navbar > *:not(:last-child) { margin-right: 20px; }
+.navbar > *:not(:last-child) {
+    margin-right: 20px;
+}
 
-.page { margin-top: 20px; }
+.page {
+    margin-top: 20px;
+}
